# 47-starter-django

./: .env.example  .gitignore  AGENTIC_UPGRADE.md  CHECKLIST.md  Dockerfile  GETTING_STARTED.md  README.md  _config.yml  amplify.yml  azure-static-web-apps.yml  config.gunicorn.py  conftest.py  docker-compose.yml  feature_01_add.md  feature_02_implement.md  feature_03_add.md  feature_04_create.md  feature_05_add.md  feature_06_implement.md  feature_07_add.md  feature_08_optimize.md  feature_09_add.md  feature_10_implement.md  firebase.json  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-base.txt  requirements-dev.txt  requirements.txt  screenshot-test.mjs  tailwind.config.js  vercel.json  vite.config.ts  wrangler.toml
.claude/: README.md
.claude/hooks/: pre-commit.sh  pre-push.sh
.claude/scripts/: createsuperuser.sh  reset-db.sh
.claude/workflows/: deploy.sh  dev.sh  setup.sh  test.sh
.firebase/: hosting.ZGlzdA.cache  hosting.c3RhdGljZmlsZXM.cache
.github/: metadata_update.sh
api/: index.py
apps/: __init__.py
apps/blog/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
config/: __init__.py  admin.py  asgi.py  celery.py  celery_config.py  gunicorn.py  settings.py  urls.py  uvicorn.py  views.py  wsgi.py
content/linkedin/: post-1.md
docs/: API.md  ARCHITECTURE.md  DESIGN_1.md  EVOLUTION.md  MASTER.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  RALPH_SUMMARY.md  README_OLD.md  feature_01_add.md  feature_02_implement.md  feature_03_add.md  feature_05_add.md  feature_07_add.md  feature_09_add.md  podcast-script.md  post-1-announcement.md  post-3-value.md
docs/Project-Brain/: GETTING_STARTED.md  PROJECT_OVERVIEW.md  TECH_STACK.md
marketing/linkedin/: post-2-technical.md  post-5-cta.md
marketing/videos/: script-1-demo-60s.md  script-2-tutorial-5min.md
src/: App.tsx  features.py  index.css  requirements.txt
templates/admin/: base_site.html  index.html
users/: admin.py  apps.py  apps_configured.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
(+8 files in other folders)
